crates/plotnik-tests/tests/06-vm/definitions/captured_ref_keeps_match_across_ascension.txt
A = (lexical_declaration)
Q = (program (A) @a)
--------------------- INPUT ----------------------
let x;
------------------ DIAGNOSTICS -------------------
error: `@a` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:2:14
  |
1 | A = (lexical_declaration)
  | ------------------------- `A` is defined here
2 | Q = (program (A) @a)
  |              ^^^
  |
help: make `A` produce a result by changing `(lexical_declaration)` to `(lexical_declaration) @a_value` in definition `A`
help: or remove `@a` and capture a node pattern directly
